# sunscanpy

./: .gitignore  CONTRIBUTING.md  README.md  checklist_release.md  pyproject.toml  whats-new.md
examples/: HowToSunscan.ipynb  Tutorial_Part1_Sunscan.ipynb  Tutorial_Part2_Scanner.ipynb
sunscan/: __init__.py  estimators.py  examples.py  fit_utils.py  math_utils.py  params.py  plotting.py  scanner.py  scanner_animation_streamlit.py  sky.py  sun.py  sun_simulation.py  utils.py
sunscan/examples/: ScanAnalysis.csv  sunscan1.nc
tests/: __init__.py  test_core.py  test_scanner.py  test_sun_simulation.py  test_utils.py
