[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sunscan"
version = "0.1.0"
description = "A python module for radar pointing calibration using the sun"
readme = "README.md"
authors = [
    {name = "Paul Ockenfuß", email = "paul.ockenfuss@physik.uni-muenchen.de"},
    {name = "Gregor Köcher", email = "gregor.koecher@physik.uni-muenchen.de"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "xarray",
    "pandas",
    "scipy",
    "skyfield>=1.40",    
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyter",
    # "pytest-cov",
    # "black",
    # "flake8",
    # "mypy",
    "streamlit",
]

[project.urls]
# Homepage = "https://github.com/yourusername/sunscan"
# Repository = "https://github.com/yourusername/sunscan"
# Issues = "https://github.com/yourusername/sunscan/issues"

[tool.setuptools.package-data]
sunscan = ["examples/*.nc"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sunscan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# [tool.black]
# line-length = 88
# target-version = ['py38']

# [tool.mypy]
# python_version = "3.8"
# warn_return_any = true
# warn_unused_configs = true
# disallow_untyped_defs = true
